--- a/projects/helsa/index.html
+++ b/projects/helsa/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Helsa Project</title>
+    <title>Helsa Shift Management mini App</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -92,8 +92,8 @@
     </style>
 </head>
 <body>
-    <h1>Helsa Project</h1>
-    <p>Display shifts on a calendar and calculate the number of days for each shift type between two dates.</p>
+    <h1>Helsa Shift Management mini App</h1>
+    <p>This tool helps shift personnel visualize their schedules on a calendar and analyze their workload between two dates. Define your shift patterns, apply them to calendars, and calculate workdays, holidays, and more.</p>
 
     <div class="controls">
         <label for="shiftSelect">Select Shift:</label>
