--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <a href="cv.html">CV</a>
     <a href="research.html">Research</a>
     <a href="blog.html">Blog</a>
-    <a href="projects/helsa/index.html">Projects</a>
+    <a href="projects.html">Projects</a>
     <a href="farsi.html">وبلاگ فارسی</a>
   </nav>
 
