--- a/research.html
+++ b/research.html
@@ -70,6 +70,7 @@
     <a href="index.html">Home</a>
     <a href="cv.html">CV</a>
     <a href="research.html">Research</a>
+    <a href="projects.html">Projects</a>
     <a href="blog.html">Blog</a>
     <a href="farsi.html">وبلاگ فارسی</a>
   </nav>
