--- a/projects/helsa/index.html
+++ b/projects/helsa/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Helsa Shift Management mini App</title>
+    <title>Helsa My Shift mini App</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -92,7 +92,7 @@
     </style>
 </head>
 <body>
-    <h1>Helsa Shift Management mini App</h1>
+    <h1>Helsa My Shift mini App</h1>
     <p>This tool helps shift personnel visualize their schedules on a calendar and analyze their workload between two dates. Define your shift patterns, apply them to calendars, and calculate workdays, holidays, and more.</p>
 
     <div class="controls">
