--- a/projects.html
+++ b/projects.html
@@ -98,7 +98,7 @@
                 <p>This tool uses an optimization model to solve the Nurse Scheduling Problem considering the nurses' preferences and satisfaction.</p>
             </li>
             <li class="project-item">
-                <h2><a href="projects/helsa/index_test.html">Test</a></h2>
+                <h2><a href="projects/helsa/chat.html">Test</a></h2>
                 <p>Test.</p>
             </li>
                 
