--- a/projects.html
+++ b/projects.html
@@ -98,8 +98,8 @@
                 <p>This tool uses an optimization model to solve the Nurse Scheduling Problem considering the nurses' preferences and satisfaction.</p>
             </li>
             <li class="project-item">
-                <h2><a href="projects/helsa/chat.html">Test</a></h2>
-                <p>Test.</p>
+                <h2><a href="projects/helsa/nsp_UI.html">NSP</a></h2>
+                <p>NSP.</p>
             </li>
                 
                 
